; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_assign_obj.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_assign_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @ct_eval_assign_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ct_eval_assign_obj(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @Z_TYPE_P(i32* %8)
  switch i32 %9, label %18 [
    i32 129, label %10
    i32 130, label %10
    i32 128, label %13
  ]

10:                                               ; preds = %3, %3
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @empty_partial_object(i32* %11)
  br label %13

13:                                               ; preds = %3, %10
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @ct_eval_add_obj_prop(i32* %14, i32* %15, i32* %16)
  store i32 %17, i32* %4, align 4
  br label %20

18:                                               ; preds = %3
  %19 = load i32, i32* @FAILURE, align 4
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %18, %13
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @Z_TYPE_P(i32*) #1

declare dso_local i32 @empty_partial_object(i32*) #1

declare dso_local i32 @ct_eval_add_obj_prop(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
